--- a/future.html
+++ b/future.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>企业文化</title>
-	<link rel="stylesheet" type="text/css" href="../css/future.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/future.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -24,13 +24,13 @@
 	<div class="logo">
 		<div class="nav">
 			<div class="nav-l">
-				<a href="furniture.html">
-					<img src="../bax/bax.png">
+				<a href="index.html">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -43,9 +43,9 @@
 	</div>
 	<div class="banner">
 		<ul>
-	        <li><img src="../bax/showbanner.jpg"></li>
-	        <li><img src="../bax/newsbanner.jpg"></li>
-	        <li><img src="../bax/cpbanner.jpg"></li>
+	        <li><img src="bax/showbanner.jpg"></li>
+	        <li><img src="bax/newsbanner.jpg"></li>
+	        <li><img src="bax/cpbanner.jpg"></li>
     	</ul>
 	</div>
 	<div class="main">
@@ -72,28 +72,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -140,20 +140,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href=""><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href=""><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href=""><img src="../bax/c3.png">人人网</a></li>
-					<li><a href=""><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href=""><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href=""><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href=""><img src="bax/c3.png">人人网</a></li>
+					<li><a href=""><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
@@ -175,8 +175,8 @@
 				</div>
 			</div>
 		</div>
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery.terseBanner.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery.terseBanner.min.js"></script>
 	<script type="text/javascript">
 		$('.banner').terseBanner();
 	</script>
