--- a/cp-show.html
+++ b/cp-show.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>产品展区</title>
-	<link rel="stylesheet" type="text/css" href="../css/cp-show.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/cp-show.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -25,12 +25,12 @@
 		<div class="nav">
 			<div class="nav-l">
 				<a href="furniture.html">
-					<img src="../bax/bax.png">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 	<div class="banner"><a href="">
-		<img src="../bax/play.png">
+		<img src="bax/play.png">
 		<p>最新奢华客厅套装全面上市，本套产品将在2014年1月1日在北京总部进行开售活动，以上为相关视频！</p></a>
 	</div>
 	<div class="main">
@@ -50,50 +50,50 @@
 			<ul class="shows">
 				<li>
 					<a href="javascript::">
-						<img src="../bax/s1_03.jpg">
+						<img src="bax/s1_03.jpg">
 						<h2>简约风格客厅套装，现已全面上市，目前本套装正在进行优惠活动。</h2>
 						<span>上市时间2014年12月25日，开售时间25日上午八点，开售地点北京市××路第一分公司。</span>
-						<img src="../bax/play.png">
+						<img src="bax/play.png">
 					</a>
 				</li>
 				<li>
 					<a href="javascript::">
-						<img src="../bax/s2_03.jpg">
+						<img src="bax/s2_03.jpg">
 						<h2>欧式纯木客厅装修套装，你的不二选择！来看一看吧！</h2>
 						<span>上市时间2014年12月5日，开售时间5日上午十点，开售地点第二分公司。</span>
-						<img src="../bax/play.png">
+						<img src="bax/play.png">
 					</a>
 				</li>
 				<li>
 					<a href="javascript::">
-						<img src="../bax/s3_03.jpg">
+						<img src="bax/s3_03.jpg">
 						<h2>时尚豪华的贵族卧室套装，采用西方精湛工艺，高端，大气，上档次！</h2>
 						<span>上市时间2014年11月28日，开售时间28日上午九点,开售地点北京总公司。</span>
-						<img src="../bax/play.png">
+						<img src="bax/play.png">
 					</a>
 				</li>
 				<li>
 					<a href="javascript::">
-						<img src="../bax/s4_03.jpg">
+						<img src="bax/s4_03.jpg">
 						<h2>知名设计师教你如何选择家居装饰品，来提高你的生活品味！</h2>
 						<span>你想让自己生活品位更上一层吗？快来听一听设计师们是怎么做到的吧！</span>
-						<img src="../bax/play.png">
+						<img src="bax/play.png">
 					</a>
 				</li>
 				<li>
 					<a href="javascript::">
-						<img src="../bax/s5_03.jpg">
+						<img src="bax/s5_03.jpg">
 						<h2>经典布艺沙发现已全面上市！心动不如行动，赶紧先来一睹为快吧！</h2>
 						<span>全新欧式布艺沙发，品味卓越，精工品质，你还在等什么？赶快行动吧！</span>
-						<img src="../bax/play.png">
+						<img src="bax/play.png">
 					</a>
 				</li>
 				<li>
 					<a href="javascript::">
-						<img src="../bax/s6_03.jpg">
+						<img src="bax/s6_03.jpg">
 						<h2>家居的摆放也是很有学问的哦，你想知道怎么摆放才会更漂亮吗？</h2>
 						<span>国际知名设计师为你讲解，关于家居如何摆放的那些事！赶紧来涨姿势吧！</span>
-						<img src="../bax/play.png">
+						<img src="bax/play.png">
 					</a>
 				</li>
 			</ul>
@@ -114,28 +114,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="javascript::javascript::javascript::javascript::javascript::">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::javascript::javascript::javascript::javascript::">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::javascript::javascript::javascript::">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::javascript::javascript::javascript::">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -182,20 +182,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href="javascript::javascript::"><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href="javascript::javascript::"><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href="javascript::javascript::"><img src="../bax/c3.png">人人网</a></li>
-					<li><a href="javascript::javascript::"><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c3.png">人人网</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
