--- a/detail.html
+++ b/detail.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>详情</title>
-	<link rel="stylesheet" type="text/css" href="../css/detail.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/detail.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -24,13 +24,13 @@
 	<div class="logo">
 		<div class="nav">
 			<div class="nav-l">
-				<a href="furniture.html">
-					<img src="../bax/bax.png">
+				<a href="index.html">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -44,10 +44,10 @@
 	<div class="main">
 		<div class="sale clearfix">
 			<div class="con">
-		<p class=""><img src="../bax/bed.jpg"></p>	
-		<p class="none"><img src="../bax/chair.jpg"></p>	
-		<p class="none"><img src="../bax/roombed.jpg"></p>
-		<p class="none"><img src="../bax/timg(1).jpg"></p>
+		<p class=""><img src="bax/bed.jpg"></p>	
+		<p class="none"><img src="bax/chair.jpg"></p>	
+		<p class="none"><img src="bax/roombed.jpg"></p>
+		<p class="none"><img src="bax/timg(1).jpg"></p>
 	</div>
 			<div class="sale-r">
 				<h2><b>贝克斯欧式实木床双人床</b></h2>
@@ -56,13 +56,13 @@
 				<div class="check">
 					<p>
 						<span>尺寸</span>
-						<span class="cp1"><a href="javascript::">1500mm*2000mm<img src="../bax/true.png"></a></span>
-						<span class="cp2"><a href="javascript::">1800mm*2000mm<img src="../bax/true.png"></a></span>
+						<span class="cp1"><a href="javascript::">1500mm*2000mm<img src="bax/true.png"></a></span>
+						<span class="cp2"><a href="javascript::">1800mm*2000mm<img src="bax/true.png"></a></span>
 					</p>
 					<p>
 						<span>颜色</span>
-						<span class="cp3"><a href="javascript::">高档黄牛皮<img src="../bax/true.png"></a></span>
-						<span class="cp4"><a href="javascript::">优质皮<img src="../bax/true.png"></a></span>
+						<span class="cp3"><a href="javascript::">高档黄牛皮<img src="bax/true.png"></a></span>
+						<span class="cp4"><a href="javascript::">优质皮<img src="bax/true.png"></a></span>
 					</p>
 							<div class="f_l add_chose">
 			<a class="reduce" onClick="setAmount.reduce('#qty_item_1')" href="javascript:void(0)">
@@ -85,10 +85,10 @@
 			</div>
 		<div class="sale-pic">
 			<ul class="myul">
-				<li class="act"><img src="../bax/b1_03.jpg"></li>
-				<li><img src="../bax/chair.jpg"></li>
-				<li><img src="../bax/roombed.jpg"></li>
-				<li><img src="../bax/timg(1).jpg"></li>
+				<li class="act"><img src="bax/b1_03.jpg"></li>
+				<li><img src="bax/chair.jpg"></li>
+				<li><img src="bax/roombed.jpg"></li>
+				<li><img src="bax/timg(1).jpg"></li>
 			</ul>
 		</div>
 		</div>
@@ -99,36 +99,36 @@
 			</div>
 			<div class="hr"></div>
 			<div class="show-pic">
-				<a href="javascript::"><img src="../bax/show1_03.jpg"></a>
-				<a href="javascript::"><img src="../bax/show2_03.jpg"></a>
+				<a href="javascript::"><img src="bax/show1_03.jpg"></a>
+				<a href="javascript::"><img src="bax/show2_03.jpg"></a>
 			</div>
 		</div>
 	</div>
 	<div class="serv">
 			<ul>
 				<li><a href="javascript::">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -175,20 +175,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href="javascript::javascript::"><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href="javascript::javascript::"><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href="javascript::javascript::"><img src="../bax/c3.png">人人网</a></li>
-					<li><a href="javascript::javascript::"><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c3.png">人人网</a></li>
+					<li><a href="javascript::javascript::"><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
@@ -210,9 +210,9 @@
 				</div>
 			</div>
 		</div>
-		<script src="../js/jquery-1.11.0.min.js"></script>
+		<script src="c="js/jquery-1.11.0.min.js"></script>
 		<script type="text/javascript" src="../js/payfor.js"></script>
-	<script src="../js/detail.js"></script>
+	<script src="c="js/detail.js"></script>
 	<script type="text/javascript">
 	$(".myul").on("click","li",function(){
 		var num=$(this).index();
