--- a/experice.html
+++ b/experice.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>家居体验馆</title>
-	<link rel="stylesheet" type="text/css" href="../css/experice.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/experice.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -25,12 +25,12 @@
 		<div class="nav">
 			<div class="nav-l">
 				<a href="furniture.html">
-					<img src="../bax/bax.png">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -90,42 +90,42 @@
 				<ul>
 					<li>
 						<a href="">
-							<h3><img src="../bax/location.png">北京海淀中关村店</h3>
+							<h3><img src="bax/location.png">北京海淀中关村店</h3>
 							<p>电话：010-84837289</p>
 							<p>地址：北京北三环西路23号（地铁中关村站C口向西200米）</p>
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<h3><img src="../bax/location.png">北京火车西站店</h3>
+							<h3><img src="bax/location.png">北京火车西站店</h3>
 							<p>电话：010-8617365</p>
 							<p>地址：北京市锦江区大业路6号（地铁亚运村路站C口）</p>
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<h3><img src="../bax/location.png">北京来广营店</h3>
+							<h3><img src="bax/location.png">北京来广营店</h3>
 							<p>电话：010-2463289</p>
 							<p>地址：北京市来广营中路5号</p>
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<h3><img src="../bax/location.png">首都师范大学店</h3>
+							<h3><img src="bax/location.png">首都师范大学店</h3>
 							<p>电话：010-8759328</p>
 							<p>地址：北京市西三环北路105号</p>
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<h3><img src="../bax/location.png">北京西三旗店</h3>
+							<h3><img src="bax/location.png">北京西三旗店</h3>
 							<p>电话：010-73859746</p>
 							<p>地址：西三旗育新小区北口（天客隆超市一层）</p>
 						</a>
 					</li>
 					<li>
 						<a href="">
-							<h3><img src="../bax/location.png">北京燕莎店</h3>
+							<h3><img src="bax/location.png">北京燕莎店</h3>
 							<p>电话：010-8759328</p>
 							<p>地址：东四环南路9号燕莎奥特莱斯C座B1楼</p>
 						</a>
@@ -138,10 +138,10 @@
 		<div class="bax">
 			<h2>BAX体验店会员 享受尊贵服务</h2>
 			<ul>
-				<li><a href=""><img src="../bax/v1.png">产品宝典</a></li>
-				<li><a href=""><img src="../bax/v2.png">爱心之伞</a></li>
-				<li><a href=""><img src="../bax/v3.png">产品送修</a></li>
-				<li><a href=""><img src="../bax/v4.png">小贝秘书</a></li>
+				<li><a href=""><img src="bax/v1.png">产品宝典</a></li>
+				<li><a href=""><img src="bax/v2.png">爱心之伞</a></li>
+				<li><a href=""><img src="bax/v3.png">产品送修</a></li>
+				<li><a href=""><img src="bax/v4.png">小贝秘书</a></li>
 			</ul>
 			<p><img src="../bax/Home.png">&nbsp>&nbsp体验店</p>
 		</div>
@@ -150,28 +150,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -218,20 +218,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href=""><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href=""><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href=""><img src="../bax/c3.png">人人网</a></li>
-					<li><a href=""><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href=""><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href=""><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href=""><img src="bax/c3.png">人人网</a></li>
+					<li><a href=""><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
