--- a/furniture_cp.html
+++ b/furniture_cp.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>产品</title>
-	<link rel="stylesheet" type="text/css" href="../css/furniture_cp.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/furniture_cp.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -24,13 +24,13 @@
 	<div class="logo">
 		<div class="nav">
 			<div class="nav-l">
-				<a href="furniture.html">
-					<img src="../bax/bax.png">
+				<a href="index.html">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -69,12 +69,12 @@
 			</div>
 		</div>
 		<div class="all">
-			<p><img src="../bax/line.jpg">所有商品</p>
+			<p><img src="bax/line.jpg">所有商品</p>
 			<div class="goods">
 			<ul>
 		<li>
 			<a href="file:///C:/Users/Administrator/Desktop/bax/html/detail.html" class="a1">
-				<img src="../bax/all1_03.jpg">
+				<img src="bax/all1_03.jpg">
 				<div class ="divA">
 					<p class="p1">贝克斯  欧式经典  精英首选</p>
 					<p class="p2">靠背菱形拉点设计，水晶镶嵌，饱满填充，均匀分布，深度释放背部压力；立体雕花+描金工艺，富丽华贵，别具一格</p>
@@ -87,7 +87,7 @@
 		</li>
 		<li>
 			<a href="javascript::" class="a1">
-					<img src="../bax/all2_03.jpg">
+					<img src="bax/all2_03.jpg">
 				<div class ="divA">
 					<p class="p1">贝克斯  欧式经典  精英首选</p>
 					<p class="p2">资深大师打造，艺术般精湛雕花；闪耀的玻璃拉扣，配上酷似王冠的轮廓造型；带您领悟欧洲贵族风韵！</p>
@@ -100,7 +100,7 @@
 		</li>
 		<li>
 			<a href="javascript::" class="a1">
-				<img src="../bax/all3_03.jpg">
+				<img src="bax/all3_03.jpg">
 				<div class ="divA">
 					<p class="p1">贝克斯  欧式经典  精英首选</p>
 					<p class="p2">尊贵与生俱来！床头扪头层黄牛皮+高档丰润绒布，皮布结合，细腻而富有光泽！精湛手工雕花描金工艺，深入细节，一起塑造磅礴古典造型!</p>
@@ -113,7 +113,7 @@
 		</li>
 		<li>
 			<a href="javascript::" class="a1">
-					<img src="../bax/all4_03.jpg">
+					<img src="bax/all4_03.jpg">
 				<div class ="divA">
 					<p class="p1">贝克斯  欧式经典  精英首选</p>
 					<p class="p2">精选优质真皮扪制，散发迷人珍珠般光泽，贴合紧绷，璀璨拉扣产生纹理自然美观！簇簇生动玫瑰雕花，层次丰富，美观宜人</p>
@@ -126,7 +126,7 @@
 		</li>
 		<li>
 			<a href="javascript::" class="a1">
-						<img src="../bax/all5_03.jpg">
+						<img src="bax/all5_03.jpg">
 				<div class ="divA">
 					<p class="p1">贝克斯  欧式经典  精英首选</p>
 					<p class="p2">贵族首选 100%全桃花芯木框架 顶级头层黄牛全真皮进口沙发（1+2+3）</p>
@@ -139,7 +139,7 @@
 		</li>
 		<li>
 			<a href="javascript::" class="a1">
-			<img src="../bax/all6_03.jpg">
+			<img src="bax/all6_03.jpg">
 				<div class ="divA">
 					<p class="p1">贝克斯  欧式经典  精英首选</p>
 					<p class="p2">奢华描银雕花，彰显贵族气质！顶级亚洲硬木选材，超强承重！方形设计+典雅色调，打造格调餐厅品位</p>
@@ -157,28 +157,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="javascript::">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -225,20 +225,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href="javascript::"><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href="javascript::"><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href="javascript::"><img src="../bax/c3.png">人人网</a></li>
-					<li><a href="javascript::"><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href="javascript::"><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href="javascript::"><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href="javascript::"><img src="bax/c3.png">人人网</a></li>
+					<li><a href="javascript::"><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
@@ -260,9 +260,9 @@
 				</div>
 			</div>
 		</div>
-		<script src="../js/jquery-1.11.0.min.js"></script>
-		<script src="../js/jquery-1.10.2.js"></script>
-		<script src="../js/furniture.js"></script>
+		<script src="js/jquery-1.11.0.min.js"></script>
+		<script src="js/jquery-1.10.2.js"></script>
+		<script src="js/furniture.js"></script>
 
 </body>
 </html>
