--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BAX家居</title>
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/furniture.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/furniture.css">
 </head>
 <body>
 	<div class="top">
@@ -25,12 +25,12 @@
 		<div class="nav">
 			<div class="nav-l">
 				<a href="furniture.html">
-					<img src="../bax/bax.png">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -43,14 +43,14 @@
 	</div>
 	<div class="banner">
 		<ul>
-	        <li><img src="../bax/futurebanner.jpg"></li>
-	        <li><img src="../bax/expbanner.jpg"></li>
-	        <li><img src="../bax/cpbanner.jpg"></li>
+	        <li><img src="bax/futurebanner.jpg"></li>
+	        <li><img src="bax/expbanner.jpg"></li>
+	        <li><img src="bax/cpbanner.jpg"></li>
     	</ul>
 	</div>
 	<div class="main">
 		<div class="main1">
-			<img src="../bax/star.png">
+			<img src="bax/star.png">
 			<p>BAX STRA 明星产品</p>
 			<p>BAX2014 <span>全部产品</span></p>
 		</div>
@@ -58,7 +58,7 @@
 			<ul class="myul">
 				<li>
 					<div class="up">
-						<a href="javascript::"><img src="../bax/star1_03.jpg"></a>
+						<a href="javascript::"><img src="bax/star1_03.jpg"></a>
 						<div class="bg"></div>
 					</div>
 					<div class="down none">
@@ -71,7 +71,7 @@
 				</li>
 				<li>
 					<div class="up">
-						<a href="javascript::"><img src="../bax/star2_03.jpg"></a>
+						<a href="javascript::"><img src="bax/star2_03.jpg"></a>
 						<div class="bg"></div>
 					</div>
 					<div class="down none">
@@ -84,7 +84,7 @@
 				</li>
 				<li>
 					<div class="up">
-						<a href="javascript::"><img src="../bax/star3_03.jpg"></a>
+						<a href="javascript::"><img src="bax/star3_03.jpg"></a>
 						<div class="bg"></div>
 					</div>
 					<div class="down none">
@@ -100,16 +100,16 @@
 		<div class="main3">
 			<ul>
 				<li>
-					<h2><img src="../bax/line.jpg">宣传视频</h2>
-					<a href="file:///C:/Users/Administrator/Desktop/bax/html/cp-show.html"><img src="../bax/sofa1_03.jpg"></a>
+					<h2><img src="bax/line.jpg">宣传视频</h2>
+					<a href="file:///C:/Users/Administrator/Desktop/bax/html/cp-show.html"><img src="bax/sofa1_03.jpg"></a>
 				</li>
 				<li>
-					<h2><img src="../bax/line.jpg">采访视频</h2>
-					<a href="javascript::"><img src="../bax/sofa2_03.jpg"></a>
+					<h2><img src="bax/line.jpg">采访视频</h2>
+					<a href="javascript::"><img src="bax/sofa2_03.jpg"></a>
 				</li>
 				<li>
-					<h2><img src="../bax/line.jpg">发布新品</h2>
-					<a href="javascript::"><img src="../bax/sofa3_03.jpg"></a>
+					<h2><img src="bax/line.jpg">发布新品</h2>
+					<a href="javascript::"><img src="bax/sofa3_03.jpg"></a>
 				</li>
 			</ul>
 		</div>
@@ -117,28 +117,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="javascript::">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="javascript::">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -185,20 +185,20 @@
 		<div class="c1 c11">
 			<p>关注我们</p>
 			<ul>
-				<li><a href="javascript::"><img src="../bax/c1.png">新浪微博</a></li>
-				<li><a href="javascript::"><img src="../bax/c2.png">腾讯微博</a></li>
-				<li><a href="javascript::"><img src="../bax/c3.png">人人网</a></li>
-				<li><a href="javascript::"><img src="../bax/c4.png">QQ空间</a></li>
+				<li><a href="javascript::"><img src="bax/c1.png">新浪微博</a></li>
+				<li><a href="javascript::"><img src="bax/c2.png">腾讯微博</a></li>
+				<li><a href="javascript::"><img src="bax/c3.png">人人网</a></li>
+				<li><a href="javascript::"><img src="bax/c4.png">QQ空间</a></li>
 			</ul>
 		</div>
 		<div class="c2">
 			<h4>联系我们</h4>
 			<div class="tel">
-				<img src="../bax/tel.png"><p>4001-666-8738</p>
+				<img src="bax/tel.png"><p>4001-666-8738</p>
 				<p class="time">7*24小时客服电话</p>
 			</div>
 			<div class="tel">
-				<img src="../bax/mes.png"><p>在线客服</p>
+				<img src="bax/mes.png"><p>在线客服</p>
 				<p class="time">服务时段：8:30-22：00</p>
 			</div>
 		</div>
@@ -220,8 +220,8 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery.terseBanner.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery.terseBanner.min.js"></script>
 	<script type="text/javascript">
 		$('.banner').terseBanner();
 		$('.up').on("mouseenter",function(){
