--- a/news.html
+++ b/news.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>新闻中心</title>
-	<link rel="stylesheet" type="text/css" href="../css/news.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/news.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -24,13 +24,13 @@
 	<div class="logo">
 		<div class="nav">
 			<div class="nav-l">
-				<a href="furniture.html">
-					<img src="../bax/bax.png">
+				<a href="index.html">
+					<img src="bax/bax.png">
 				</a>
 			</div>
 			<div class="nav-r">
 				<ul>
-					<li><a href="furniture.html">首页</a></li>
+					<li><a href="index.html">首页</a></li>
 					<li><a href="experice.html">BAX体验馆</a></li>
 					<li><a href="furniture_cp.html">BAX产品</a></li>
 					<li><a href="news.html">新闻中心</a></li>
@@ -43,9 +43,9 @@
 	</div>
 	<div class="banner">
 		<ul>
-	        <li><img src="../bax/newsbanner.jpg"></li>
-	        <li><img src="../bax/showbanner.jpg"></li>
-	        <li><img src="../bax/cpbanner.jpg"></li>
+	        <li><img src="bax/newsbanner.jpg"></li>
+	        <li><img src="bax/showbanner.jpg"></li>
+	        <li><img src="bax/cpbanner.jpg"></li>
     	</ul>
 		<!-- <a href="">恭贺本公司被评为国家级质量安全模范！日前，在北京召开的第一届全国质量安全评奖大会上，本公司脱颖而出。
 		</a> -->
@@ -55,7 +55,7 @@
 			<div class="text">
 			<ul>
 				<li>
-					<div class="left"><a href=""><img src="../bax/n1_03.jpg"></a></div>
+					<div class="left"><a href=""><img src="bax/n1_03.jpg"></a></div>
 					<div class="right">
 						<h4>新的一年将至，我公司要在新的一年里创造更好的成绩，争取早日进入世界100强，为此我公司领导提出了：“展望未来，<br />创新进取”的新口号，并提高员工福利待遇，让员工可以更积极的投入到工作中去。</h4>
 						<p>2014年12月28日，本公司召开2014年总结大会。在大会上表彰先进个人以及集体。同时对2015年的形势进行分析。领导总结道：新一年的到来，给我们带来了美好的憧憬，让我们以更加饱满的热情和奋发向上的精神状态，投入到自己岗位的工作中去，用自己的实际行动去实践“敬业、奉献、创新”企业精神，再创新的辉煌吧!</p>
@@ -63,7 +63,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="left"><a href=""><img src="../bax/n2_03.jpg"></a></div>
+					<div class="left"><a href=""><img src="bax/n2_03.jpg"></a></div>
 					<div class="right">
 						<h4>近日，本公司独立研发制作的新款欧式风格多功能大床首席亮相！其独特造型，顶级的舒适感，让体验者赞不绝口！ </h4>
 						<p>2014年12月12日，贝克斯公司的新品发布会在公司总部顺利召开，在本次发布会上，由本公司独立自主研发的新品在这天正式亮相.欧式古典家具以前都是欧洲贵族们专用的，产品高档气派、尊贵典雅，融入浓厚的欧洲古典文化，已经成为一种经典。因此，此次新品的推出，吸引了广大客户的关注，在开售日的预约已经达到了饱和状态。</p>
@@ -71,11 +71,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="left"><a href=""><img src="../bax/n3_03.jpg"></a></div>
+					<div class="left"><a href=""><img src="bax/n3_03.jpg"></a></div>
 					<div class="right">
 						<h4>本公司因业务需要，现面向全社会招聘一名家居顾问，有工作经验者优先！</h4>
 						<p>招聘时间：2014年11月15号—2014年11月30号。请提交个人简历至××××××××@168.com我们欢迎你的到来！相关要求：相关要求1、大专以上学历；市场营销等相关专业优先；2、有较强的服务意识，具有良好的表达和沟通能力及责任心；有较强的自主学习能力；3、年龄19岁—35岁，男身高173cm以上，女身高163以上，五官端正，形象佳，谈吐大方，举止得体。诚挚有服务意识，责任心强的有志青年，公司优雅的工作环境，更多委培学习的机会，为您施展自己才华提供了良好的平台。期待您的加入。</p>
-						<p>2014年11月15日</p>
+						<p>2016年11月15日</p>
 					</div>
 				</li>
 			</ul>
@@ -97,28 +97,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -165,20 +165,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href=""><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href=""><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href=""><img src="../bax/c3.png">人人网</a></li>
-					<li><a href=""><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href=""><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href=""><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href=""><img src="bax/c3.png">人人网</a></li>
+					<li><a href=""><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
@@ -200,8 +200,8 @@
 				</div>
 			</div>
 		</div>
-	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery.terseBanner.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/jquery.terseBanner.min.js"></script>
 	<script type="text/javascript">
 		$('.banner').terseBanner();
 	</script>
