--- a/order.html
+++ b/order.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>订单</title>
-	<link rel="stylesheet" type="text/css" href="../css/order.css">
-	<link rel="stylesheet" type="text/css" href="../css/base.css">
-	<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/order.css">
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 </head>
 <body>
 	<div class="top">
@@ -31,28 +31,28 @@
 	<div class="serv">
 			<ul>
 				<li><a href="">
-					<img src="../bax/icon1.png">
+					<img src="bax/icon1.png">
 					<p>
 						<span>正品保障</span><br />
 						<span>所有产品都是精致正品</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon2.png">
+					<img src="bax/icon2.png">
 					<p>
 						<span>7天退换货</span><br />
 						<span>支持7天退货，30天换货</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon3.png">
+					<img src="bax/icon3.png">
 					<p>
 						<span>285自提点</span><br />
 						<span>轻松自在，覆盖各大城市</span>
 					</p></a>
 				</li>
 				<li><a href="">
-					<img src="../bax/icon4.png">
+					<img src="bax/icon4.png">
 					<p>
 						<span>365家客服网点</span><br />
 						<span>专业保修服务就在家门口</span>
@@ -99,20 +99,20 @@
 			<div class="c1 c11">
 				<p>关注我们</p>
 				<ul>
-					<li><a href=""><img src="../bax/c1.png">新浪微博</a></li>
-					<li><a href=""><img src="../bax/c2.png">腾讯微博</a></li>
-					<li><a href=""><img src="../bax/c3.png">人人网</a></li>
-					<li><a href=""><img src="../bax/c4.png">QQ空间</a></li>
+					<li><a href=""><img src="bax/c1.png">新浪微博</a></li>
+					<li><a href=""><img src="bax/c2.png">腾讯微博</a></li>
+					<li><a href=""><img src="bax/c3.png">人人网</a></li>
+					<li><a href=""><img src="bax/c4.png">QQ空间</a></li>
 				</ul>
 			</div>
 			<div class="c2">
 				<h4>联系我们</h4>
 				<div class="tel">
-					<img src="../bax/tel.png"><p>4001-666-8738</p>
+					<img src="bax/tel.png"><p>4001-666-8738</p>
 					<p class="time">7*24小时客服电话</p>
 				</div>
 				<div class="tel">
-					<img src="../bax/mes.png"><p>在线客服</p>
+					<img src="bax/mes.png"><p>在线客服</p>
 					<p class="time">服务时段：8:30-22：00</p>
 				</div>
 			</div>
